@@ -21,51 +21,50 @@ module ActiveMerchant #:nodoc:
       end
 
       def purchase(money, creditcard, options = {})
-        post = {}
-        add_aux_data(post, options)
-        add_amount(post, money)
-        add_creditcard(post, creditcard)
-        add_name(post, creditcard)
-        add_address(post, options)
-
-        commit(build_sale_request(post))
+        commit(:sale) do |xml|
+          add_auth_purchase(xml, money, creditcard, options)
+        end
       end
 
       def authorize(money, creditcard, options = {})
-        post = {}
-        add_aux_data(post, options)
-        add_amount(post, money)
-        add_creditcard(post, creditcard)
-        add_name(post, creditcard)
-        add_address(post, options)
-
-        commit(build_sale_request(post, "auth"))
+        commit(:auth) do |xml|
+          add_auth_purchase(xml, money, creditcard, options)
+        end
       end
 
       def capture(money, authorization, options = {})
-        post = {}
-        add_amount(post, money)
-        add_aux_data(post, options)
-        commit(build_capture_request(authorization, post))
+        commit(:capture) do |xml|
+          add_order_id(xml, authorization)
+          add_reference_num(xml, options)
+          xml.payment do
+            add_amount(xml, money)
+          end
+        end
       end
 
       def void(authorization, options = {})
-        post = {}
-        commit(build_void_request(authorization, post))
+        _, transaction_id = split_authorization(authorization)
+        commit(:void) do |xml|
+          xml.transactionID transaction_id
+        end
       end
 
       def refund(money, authorization, options = {})
-        post ={}
-        add_aux_data(post, options)
-        add_amount(post, money)
-        commit(build_refund_request(authorization, post))
+        commit(:return) do |xml|
+          add_order_id(xml, authorization)
+          add_reference_num(xml, options)
+          xml.payment do
+            add_amount(xml, money)
+          end
+        end
       end
 
       private
 
-      def commit(request)
-        url = (test? ? self.test_url : self.live_url)
+      def commit(action)
+        request = build_xml_request(action) { |doc| yield(doc) }
         response = parse(ssl_post(url, request, 'Content-Type' => 'text/xml'))
+
         Response.new(
           success?(response),
           message_from(response),
@@ -75,146 +74,42 @@ module ActiveMerchant #:nodoc:
         )
       end
 
+      def url
+        test? ? self.test_url : self.live_url
+      end
+
+      def build_xml_request(action)
+        builder = Nokogiri::XML::Builder.new(encoding: 'UTF-8')
+        builder.send("transaction-request") do |xml|
+          xml.version '3.1.1.15'
+          xml.verification do
+            xml.merchantId @options[:login]
+            xml.merchantKey @options[:password]
+          end
+          xml.order do
+            xml.send("#{action}!") do
+              yield(xml)
+            end
+          end
+        end
+
+        builder.to_xml(indent: 2)
+      end
+
       def success?(response)
-        (response[:response_code] == '0')
+        response[:response_code] == '0'
       end
 
       def message_from(response)
-        return response[:error_message] if response[:error_message].present?
-        return response[:processor_message] if response[:processor_message].present?
-        return response[:response_message] if response[:response_message].present?
-        return (success?(response) ? 'success' : 'error')
+        response[:error_message] || response[:response_message] || response[:processor_message] || response[:error_msg]
       end
 
       def authorization_from(response)
-        (response[:order_id] || '') + '|' + (response[:transaction_id] || '')
+        "#{response[:order_id]}|#{response[:transaction_id]}"
       end
 
       def split_authorization(authorization)
         authorization.split("|")
-      end
-
-      def add_aux_data(post, options)
-        post[:processorID] = (test? ? 1 : 4) # test: 1, redecard: 2, cielo: 4
-        post[:referenceNum] = options[:order_id]
-        post[:installments] = options[:installments] if options.has_key?(:installments) && options[:installments] > 1 # only send installments if it is a deferred payment
-      end
-
-      def add_amount(post, money)
-        post[:amount] = amount(money)
-      end
-
-      def add_creditcard(post, creditcard)
-        post[:card_number] = creditcard.number
-        post[:card_exp_month] = creditcard.month
-        post[:card_exp_year] = creditcard.year
-        post[:card_cvv] = creditcard.verification_value
-      end
-
-      def add_name(post, creditcard)
-        post[:billing_name] = creditcard.name
-      end
-
-      def add_address(post, options)
-        if(address = (options[:address] || options[:billing_address]))
-          post[:billing_address] = address[:address1]
-          post[:billing_address2] = address[:address2]
-          post[:billing_city] = address[:city]
-          post[:billing_state] = address[:state]
-          post[:billing_postalcode] = address[:zip]
-          post[:billing_country] = address[:country]
-          post[:billing_phone] = address[:phone]
-        end
-      end
-
-      def build_refund_request(authorization, params)
-        order_id, _ = split_authorization(authorization)
-        build_request(params) do |xml|
-          xml.return! {
-            xml.orderID order_id
-            xml.referenceNum params[:referenceNum]
-            xml.payment {
-              xml.chargeTotal params[:amount]
-            }
-          }
-        end
-      end
-
-      def build_void_request(authorization, params)
-        _, transaction_id = split_authorization(authorization)
-        build_request(params) do |xml|
-          xml.void! {
-            xml.transactionID transaction_id
-          }
-        end
-      end
-
-      def build_capture_request(authorization, params)
-        order_id, _ = split_authorization(authorization)
-        build_request(params) do |xml|
-          xml.capture! {
-            xml.orderID order_id
-            xml.referenceNum params[:referenceNum]
-            xml.payment {
-              xml.chargeTotal params[:amount]
-            }
-          }
-        end
-      end
-
-      def build_sale_request(params, action="sale")
-        build_request(params) do |xml|
-          xml.send(action) {
-            xml.processorID params[:processorID]
-            xml.fraudCheck 'N'
-            xml.referenceNum params[:referenceNum] # spree_order
-            xml.transactionDetail {
-              xml.payType {
-                xml.creditCard {
-                  xml.number params[:card_number]
-                  xml.expMonth params[:card_exp_month]
-                  xml.expYear params[:card_exp_year]
-                  xml.cvvNumber params[:card_cvv]
-                }
-              }
-            }
-            xml.payment {
-              xml.chargeTotal params[:amount]
-              if params[:installments].present?
-                xml.creditInstallment {
-                  xml.numberOfInstallments params[:installments]
-                  xml.chargeInterest 'N'
-                }
-              end
-            }
-            xml.billing {
-              xml.name params[:billing_name]
-              xml.address params[:billing_address] if params[:billing_address].present?
-              xml.address2 params[:billing_address2] if params[:billing_address2].present?
-              xml.city params[:billing_city] if params[:billing_city].present?
-              xml.state params[:billing_state] if params[:billing_state].present?
-              xml.postalcode params[:billing_postalcode] if params[:billing_postalcode].present?
-              xml.country params[:billing_country] if params[:billing_country].present?
-              xml.phone params[:billing_phone] if params[:billing_phone].present?
-            }
-          }
-        end
-      end
-
-      def build_request(params)
-        builder = Nokogiri::XML::Builder.new(encoding: 'UTF-8') do |xml|
-          xml.send("transaction-request") {
-            xml.version API_VERSION
-            xml.verification {
-              xml.merchantId @options[:login]
-              xml.merchantKey @options[:password]
-            }
-            xml.order {
-              yield(xml)
-            }
-          }
-        end
-        builder.to_xml(indent: 2)
       end
 
       def parse(body)
@@ -233,6 +128,73 @@ module ActiveMerchant #:nodoc:
         else
           response[node.name.underscore.to_sym] = node.text
         end
+      end
+
+      def add_auth_purchase(xml, money, creditcard, options)
+        add_processor_id(xml)
+        xml.fraudCheck('N')
+        add_reference_num(xml, options)
+        xml.transactionDetail do
+          xml.payType do
+            xml.creditCard do
+              xml.number(creditcard.number)
+              xml.expMonth(creditcard.month)
+              xml.expYear(creditcard.year)
+              xml.cvvNumber(creditcard.verification_value)
+            end
+          end
+        end
+        xml.payment do
+          add_amount(xml, money)
+          add_installments(xml, options)
+        end
+        add_billing_address(xml, creditcard, options)
+      end
+
+      def add_reference_num(xml, options)
+        xml.referenceNum(options[:order_id] || generate_unique_id)
+      end
+
+      def add_amount(xml, money)
+        xml.chargeTotal(amount(money))
+      end
+
+      def add_processor_id(xml)
+        if test?
+          xml.processorID(1)
+        else
+          xml.processorID(@options[:processor_id] || 4)
+        end
+      end
+
+      def add_installments(xml, options)
+        if options.has_key?(:installments) && options[:installments] > 1
+          xml.creditInstallment do
+            xml.numberOfInstallments options[:installments]
+            xml.chargeInterest 'N'
+          end
+        end
+      end
+
+      def add_billing_address(xml, creditcard, options)
+        address = options[:billing_address]
+        return unless address
+
+        xml.billing do
+          xml.name creditcard.name
+          xml.address address[:address1] if address[:address1]
+          xml.address2 address[:address2] if address[:address2]
+          xml.city address[:city] if address[:city]
+          xml.state address[:state] if address[:state]
+          xml.postalcode address[:zip] if address[:zip]
+          xml.country address[:country] if address[:country]
+          xml.phone address[:phone] if address[:phone]
+        end
+      end
+
+      def add_order_id(xml, authorization)
+        order_id, _ = split_authorization(authorization)
+        xml.orderID order_id
       end
     end
   end
